--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,8 @@ $black: #000 !default;
 
 $pink-light: #ff9ff3;
 $pink: #f368e0;
+$pink1: rgba(243, 104, 224, 0.2);
+$pink2: rgba(243, 104, 224, 0.8);
 $orange-light: #feca57;
 $orange: #ff9f43;
 $jade: #00d2d3;
