--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,18 +1,31 @@
 // Styling for the masthead
 @import 'variables';
 @import 'mixins';
+
+.masthead-layer{
+    height:100%;
+    width:100%;
+    position: absolute;
+    left:0px;
+    top:0px;
+    opacity:0.2;
+    background:  linear-gradient(to bottom, $pink1 0%,$pink2 100%), url('/Users/renaud/Projects/scoptech/scoptech/img/scoptech-2.jpg') no-repeat;
+    background-size: cover;
+    transition: background-image 0.2s ease-in-out;
+}
 header.masthead {
-  background-color: $pink;
-  transition: background-color 1s ease-in-out;
+  transition: background-color 7s ease-in-out;
   text-align: center;
   color: white;
-
+  opacity:1;
+  background-color: $pink;
   .intro-text {
+    height: 100vh;
     padding-top: 30vh;
     padding-bottom: 15vh;
     .intro-lead-in {
       font-size: 22px;
-      font-style: italic;
+      font-style: normal;
       line-height: 22px;
       margin-bottom: 25px;
       @include serif-font;
@@ -25,20 +38,40 @@ header.masthead {
       @include heading-font;
     }
     .btn-primary {
-          box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
+        position: relative;
+        z-index: 1000;
+        box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
     }
   }
+  .small-intro-text {
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+    .intro-heading {
+      font-size: 30px;
+      font-weight: 600;
+      line-height: 40px;
+      margin-top: 30px;
+      @include heading-font;
+    }
+    .btn-primary {
+        position: relative;
+        z-index: 1000;
+        box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
+    }
+  }
+
 }
 
 @media(min-width:768px) {
   header.masthead {
     .intro-text {
-      padding-top: 40vh;
-      padding-bottom: 25vh;
+      height: 100vh;
+      padding-top: 30vh;
+      padding-bottom: 15vh;
 
     .intro-lead-in {
-        font-size: 40px;
-        font-style: italic;
+        font-size: 60px;
+        font-style: normal;
         line-height: 40px;
         margin-bottom: 25px;
         @include serif-font;
@@ -48,6 +81,18 @@ header.masthead {
         font-weight: 700;
         line-height: 75px;
         margin-bottom: 50px;
+        @include heading-font;
+      }
+    }
+    .small-intro-text {
+      padding-top: 5vh;
+      padding-bottom: 5vh;
+
+      .intro-heading {
+        font-size: 45px;
+        font-weight: 600;
+        line-height: 65px;
+        margin-top: 50px;
         @include heading-font;
       }
     }
