--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -9,7 +9,7 @@
     left:0px;
     top:0px;
     opacity:0.2;
-    background:  linear-gradient(to bottom, $pink1 0%,$pink2 100%), url('/Users/renaud/Projects/scoptech/scoptech/img/scoptech-2.jpg') no-repeat;
+    background:  linear-gradient(to bottom, $pink1 0%,$pink2 100%), url('/img/scoptech-2.jpg') no-repeat;
     background-size: cover;
     transition: background-image 0.2s ease-in-out;
 }
